--- a/.github/workflows/auto-create-dir.yml
+++ b/.github/workflows/auto-create-dir.yml
@@ -17,8 +17,8 @@ jobs:
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        git checkout -b add-todays-files
-        git push origin add-todays-files
+        git checkout -b add-todays-files_${{ env.CURRENT_DATETIME }}
+        git push origin add-todays-files_${{ env.CURRENT_DATETIME }}
 
     - name: setup python
       uses: actions/setup-python@v5.1.1
@@ -32,7 +32,7 @@ jobs:
       run: |
         git add .
         git commit -m "add: todays files"
-        git push origin add-todays-files
+        git push origin add-todays-files_${{ env.CURRENT_DATETIME }}
 
   create-pull-request:
     runs-on: ubuntu-latest
@@ -43,6 +43,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           base: main
-          branch: add-todays-files
+          branch: add-todays-files_${{ env.CURRENT_DATETIME }}
           title: "CI: 本日分の空ファイル作成"
           body: "This is an automatically generated PR from GitHub Actions"
