--- a/.github/workflows/auto-create-dir.yml
+++ b/.github/workflows/auto-create-dir.yml
@@ -13,12 +13,12 @@ jobs:
     - name: Git checkout
       uses: actions/checkout@v4
 
-    - name: Create new branch
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git checkout -b add-todays-files
-        git push origin add-todays-files
+    # - name: Create new branch
+    #   run: |
+    #     git config user.name "github-actions[bot]"
+    #     git config user.email "github-actions[bot]@users.noreply.github.com"
+    #     git checkout -b add-todays-files
+    #     git push origin add-todays-files
 
     - name: setup python
       uses: actions/setup-python@v5.1.1
@@ -28,24 +28,32 @@ jobs:
     - name: Create Directory
       run: python dir_maker.py
 
-    - name: Commit and push changes
-      run: |
-        git add .
-        git commit -m "add: todays files"
-        git push origin add-todays-files
+    # - name: Commit and push changes
+    #   run: |
+    #     git add .
+    #     git commit -m "add: todays files"
+    #     git push origin add-todays-files
 
-  create-pull-request:
-    runs-on: ubuntu-latest
-    needs: auto_create
-    steps:
-      - name: Git checkout
-        uses: actions/checkout@v4
+    - name: Create pull request
+      uses: peter-evans/create-pull-request@v5
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        base: main
+        title: "CI: 本日分の空ファイル作成"
+        body: "This is an automatically generated PR from GitHub Actions"
 
-      - name: Create pull request
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          base: main
-          head: add-todays-files
-          title: "CI: 本日分の空ファイル作成"
-          body: "This is an automatically generated PR from GitHub Actions"
+  # create-pull-request:
+  #   runs-on: ubuntu-latest
+  #   needs: auto_create
+  #   steps:
+  #     - name: Git checkout
+  #       uses: actions/checkout@v4
+
+  #     - name: Create pull request
+  #       uses: peter-evans/create-pull-request@v5
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         base: main
+  #         head: add-todays-files
+  #         title: "CI: 本日分の空ファイル作成"
+  #         body: "This is an automatically generated PR from GitHub Actions"
