--- a/.github/workflows/auto-create-dir.yml
+++ b/.github/workflows/auto-create-dir.yml
@@ -30,5 +30,7 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         base: main
+        author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
+        delete-branch: true
         title: "CI: 本日分の空ファイル作成"
         body: "This is an automatically generated PR from GitHub Actions"
